--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,6 +5,7 @@
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
+  background-color: rgba(var(--background-start-rgb), 1);
 }
 
 .description {
@@ -60,7 +61,7 @@
 }
 
 .card h2 {
-  font-weight: 600;
+  font-weight: 900;
   margin-bottom: 0.7rem;
 }
 
@@ -77,7 +78,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  padding: 4rem 0;
+  padding: 3rem 0;
 }
 
 .center::before {
@@ -89,7 +90,7 @@
 }
 
 .center::after {
-  background: var(--primary-glow);
+  background: var(--background-start-rgb);
   width: 240px;
   height: 180px;
   z-index: -1;
