--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -13,6 +13,7 @@
   justify-content: inherit;
   align-items: inherit;
   font-size: 0.85rem;
+  color: rgba(var(--callout-border-rgb), 0.25);
   max-width: var(--max-width);
   width: 100%;
   z-index: 2;
