--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,6 +6,7 @@
   padding: 6rem;
   min-height: 100vh;
   background-color: tan;
+  color: red;
 }
 
 .description {
@@ -18,7 +19,7 @@
   width: 100%;
   z-index: 2;
   font-family: var(--font-mono);
-  color: orange;
+  color: red;
 }
 
 .description a {
